k8s/overlays/production/tailscale-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wasteco-api-ts
  namespace: wasteco
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: wasteco-api-faisalaffan
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale.com/hostname
  selector:
    app: wasteco-api
  ports:
    - port: 80
      targetPort: 8090
      name: http
