k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wasteco-api
  namespace: wasteco
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - waste-collection.faisalaffan.com
      secretName: wasteco-tls
  rules:
    - host: waste-collection.faisalaffan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wasteco-api
                port:
                  number: 8080
